--- a/assets/scss/reset.sass
+++ b/assets/scss/reset.sass
@@ -35,7 +35,8 @@ a
 		color: $black
 
 img
-    user-select: none
+	user-select: none
+	max-width: 100%
 
 button, a, input 
 	&:hover, &:active, &:focus
