--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,16 +11,14 @@
 {{ "<!-- End of Hero Section -->" | safeHTML }}
 
 <section class="hero__wrap">
-    
-        {{- partial "header.html" . -}}
-        <!-- BEGIN section -->
-        {{- partial "_hero.html" . -}}
-        <!-- END section -->
-   
+{{- partial "header.html" . -}}
+<!-- BEGIN section -->
+{{- partial "_hero.html" . -}}
+<!-- END section -->
 </section>
 
-
 <!-- BEGIN section -->
+{{- partial "_home-sec-about.html" . -}}
 <!-- END section -->
 
 <!-- BEGIN section -->
