--- a/layouts/partials/_hero.html
+++ b/layouts/partials/_hero.html
@@ -17,9 +17,8 @@
                     </a>
                 </div>
                 <div class="hero__col">
-                    <p class="text--main"><small>$399</small></p>
-                    <p class="h3">"The Morning Glory"<br>
-                        Ceiling Lamp</p>
+                    <p class="text--main"><small>{{ .text_1 }}</small></p>
+                    <p class="h3">{{ .text_2 | safeHTML}}</p>
                     <div class="text--main">
                         <svg class="icon" width="48" height="48">
                             <use xlink:href="#arr-r"></use>
@@ -29,10 +28,10 @@
             </div>
             <div class="hero__row">
                 <div class="hero__col">
-                    <p>Enhance your home or office with effective and stylish <b>lightning</b> by Prizma Studio.</p>
+                    <p>{{ .text_3 | safeHTML }}</p>
                     <p class="text--main">
                         <b>
-                            Send a request now!
+                            {{ .text_4 }}
                         </b>
                     </p>
                     <div class="hero__soc">
@@ -42,10 +41,9 @@
                 <div class="hero__col">
                     <img src="./images/img1.webp" alt="ALT" height="110">
                     <p>
-                        We have more than <strong>10 years</strong> of experience of improving our clients’ projects
-                        with lighting solutions.
+                        {{ .text_5 | markdownify }}
                     </p>
-                    <a href="#" class="btn--link">Read more</a>
+                    <a href="#" class="btn--link">{{ .btn_link }}</a>
                 </div>
             </div>
         </div>
