--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,6 +22,7 @@
 <!-- END section -->
 
 <!-- BEGIN section -->
+{{- partial "_home-sec-features.html" . -}}
 <!-- END section -->
 
 <!-- BEGIN section -->
