--- a/layouts/partials/_hero.html
+++ b/layouts/partials/_hero.html
@@ -12,7 +12,7 @@
                         <h1 class="h1">{{ .title | markdownify }}</h1>
                     </hgroup>
 
-                    <a href="#form-main" class="btn">
+                    <a href="#" class="btn">
                         <b><span>{{ .btn.label }}</span><span>{{ .btn.label }}</span></b>
                     </a>
                 </div>
