--- a/layouts/partials/_home-sec-about.html
+++ b/layouts/partials/_home-sec-about.html
@@ -5,7 +5,7 @@
 <section class="section section--about">
     <div class="container">
         
-       <div class="row--1">
+       <div class="row row--1">
         <div>
             <hgroup>
                 <h2 class="subtitle">{{ .suptitle }}</h2>
