--- a/assets/scss/_text.sass
+++ b/assets/scss/_text.sass
@@ -22,9 +22,13 @@ h2, .h2
     +maw($xs)
         +ft(28, 28*1.4, 600)
   
-
 h3, .h3
-    +ft(24, 24*1.4, 500)
+    +ft(36, 36*1.4, 500)
+    +maw($md)
+        +ft(18, 18*1.4, 500)
+      
+h4, .h4
+    +ft(26, 26*1.4, 500)
     +maw($md)
         +ft(18, 18*1.4, 500)
 
