--- a/assets/scss/reset.sass
+++ b/assets/scss/reset.sass
@@ -1,3 +1,14 @@
+%scroll
+	&::-webkit-scrollbar
+		width: 10px
+		height: 10px
+
+	&::-webkit-scrollbar-track
+		background-color: $black
+
+	&::-webkit-scrollbar-thumb
+		background: $main
+
 html, body 
 	//height: 100%
 	min-height: 100vh
@@ -8,15 +19,7 @@ html, body
 
 body
 	background-color: $white
-	&::-webkit-scrollbar
-		width: 10px
-		height: 10px
-
-	&::-webkit-scrollbar-track
-		background-color: $black
-
-	&::-webkit-scrollbar-thumb
-		background: $main
+	@extend %scroll
 
 
 *
