--- a/layouts/index.html
+++ b/layouts/index.html
@@ -29,10 +29,12 @@
 {{- partial "_home-sec-features-gallery.html" . -}}
 <!-- END section -->
 
-
+<div class="bg--2">
 <!-- BEGIN section -->
+{{- partial "_home-sec-services.html" . -}}
 <!-- END section -->
 
+</div>
 
 <!-- BEGIN section -->
 <!-- END section -->
