--- a/assets/scss/_styles.sass
+++ b/assets/scss/_styles.sass
@@ -180,6 +180,38 @@ a
 		+maw($xs)
 			p
 				display: block
+	&--2
+		grid-template-columns: repeat(3, 1fr)
+		padding: 0
+		img
+			height: 100%
+			object-fit: cover
+			&:nth-child(1)
+				grid-row-start: 1
+				grid-row-end: 2
+			&:nth-child(2)
+				grid-row-start: 3
+				grid-row-end: 4
+				border-radius: 0 0 0 10pc
+			&:nth-child(3), &:nth-child(4)
+				grid-row-start: 1 
+				grid-row-end: 4
+			&:nth-child(4)
+				border-radius: 0 10pc 0 0
+		+maw($xs)
+			grid-template-columns: 1fr
+			img
+				&:nth-child(n)
+					grid-column: 1
+				&:nth-child(1)
+					grid-row: 1
+				&:nth-child(2)
+					grid-row: 2
+				&:nth-child(3)
+					grid-row: 3
+				&:nth-child(4)
+					grid-row: 4	
+
 
 .service
 	display: grid
