add section contacts

--- a/assets/scss/_text.sass
+++ b/assets/scss/_text.sass
@@ -52,7 +52,7 @@ h1, h2, h3, h4, h5, h6
         color: $main
     &--note
         color: lighten($main, 20%)
-        display: flex
+        display: inline-flex
         align-items: center
         gap: $gap1
         svg
