--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,6 +16,7 @@
     {{- partial "_hero.html" . -}}
     <!-- END section -->
 </section>
+<main>
 
 <!-- BEGIN section -->
 {{- partial "_home-sec-about.html" . -}}
@@ -36,6 +37,7 @@
 </div>
 
 <!-- BEGIN section -->
+{{- partial "_home-sec-contacts.html" . -}}
 <!-- END section -->
 
 <!-- BEGIN section -->
@@ -47,4 +49,5 @@
 <!-- BEGIN section -->
 
 <!-- END section -->
+</main>
 {{ end }}
