--- a/layouts/partials/_home-sec-features.html
+++ b/layouts/partials/_home-sec-features.html
@@ -28,7 +28,9 @@
                     <li><span>{{ .item }}</span></li>
                     {{ end }}
                 </ul>
+               <div>
                 <p class="text--note">{{ .note }}</p>
+               </div>
 
                 <a href="#" class="btn">
                     <b><span>{{ .btn.label }}</span><span>{{ .btn.label }}</span></b>
