--- a/layouts/partials/_logo.html
+++ b/layouts/partials/_logo.html
@@ -7,7 +7,7 @@
 <a class="logo" href="{{ `/`| relLangURL }}">
    {{ if $.Site.Params.logo }}
    <img src="{{ if eq $logo_mode "dark" }} {{ $.Site.Params.logo_dark | relURL }} {{ else }} {{ $.Site.Params.logo |
-      relURL }} {{ end }}" alt="{{ .Site.Params.site_name }}" {{ if $logo_w }} width="{{ $logo_w }}"
+      relURL }} {{ end }}" alt="{{ .Site.Params.site_name }}" {{ if $logo_w }} 
       height="{{ $logo_h }}" {{ end }}>
    {{ if $logo_description }}
    <span>{{ $.Site.Params.logo_description | markdownify }}</span>
