--- a/assets/scss/_styles.sass
+++ b/assets/scss/_styles.sass
@@ -29,7 +29,7 @@ a
 			+ft(24, 24, 700)
 
 %p
-	opacity: 0.6
+	color: rgba($white, 0.6)
 	+ft(16, 16*1.5, 400)
 
 .section
@@ -60,6 +60,18 @@ a
 		padding-bottom: var(--gapSection)
 		p:not([class])
 			@extend %p
+		&-gallery
+			margin-bottom: 0
+	&--contacts
+		margin: 0
+		padding-top: 7em
+		padding-bottom: 7em
+		background-image: url('../images/bg/cta.png')
+		background-repeat: no-repeat
+		background-size: cover
+		background-position: 0 50%
+		p:not([class])
+			@extend %p
 	
 .row
 	display: grid
@@ -71,8 +83,17 @@ a
 		grid-template-columns: 1fr 1fr
 		div
 			grid-column: 2
+	&--3
+		grid-template-columns: 1.5fr 1fr
+		div
+			grid-column: 1
 	+maw($md)
 		&--1, &--2
+			grid-template-columns: 1fr
+		&--2
+			gap: 0
+	+maw($sm)
+		&--3
 			grid-template-columns: 1fr
 
 .bg
@@ -100,8 +121,13 @@ a
 				display: block
 				+sz(100%, 100%)
 				background: rgba($black, 0.75)	
+	
 
 
+.col
+	display: grid
+	gap: $gap2
+	
 
 .stat
 	padding: $gap4
@@ -198,7 +224,7 @@ a
 				grid-row-end: 4
 			&:nth-child(4)
 				border-radius: 0 10pc 0 0
-		+maw($xs)
+		+maw($sm)
 			grid-template-columns: 1fr
 			img
 				&:nth-child(n)
