--- a/layouts/404.html
+++ b/layouts/404.html
@@ -4,8 +4,9 @@
 <section class="error-page">
   <div class="center">
     <div class="text-center py-5 my-5">
+      {{ .Scratch.Set "logo_h" "32" }} 
+			{{ .Scratch.Set "logo_w" "auto" }} 
       {{- partial "_logo.html" . -}}
-
       <h1>404</h1>
       <h3>Page Not Found</h3>
       <p>
