--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,37 +12,38 @@
 </section>
 <main>
 
-<!-- BEGIN section -->
-{{- partial "_home-sec-about.html" . -}}
-<!-- END section -->
-
-<!-- BEGIN section -->
-{{- partial "_home-sec-features.html" . -}}
-<!-- END section -->
-
-<!-- BEGIN section -->
-{{- partial "_home-sec-features-gallery.html" . -}}
-<!-- END section -->
-
-<div class="bg--2">
     <!-- BEGIN section -->
-    {{- partial "_home-sec-services.html" . -}}
+    {{- partial "_home-sec-about.html" . -}}
     <!-- END section -->
-</div>
 
-<!-- BEGIN section -->
-{{- partial "_home-sec-contacts.html" . -}}
-<!-- END section -->
+    <!-- BEGIN section -->
+    {{- partial "_home-sec-features.html" . -}}
+    <!-- END section -->
 
-<!-- BEGIN section -->
-{{- partial "_home-sec-projects.html" . -}}
-<!-- END section -->
+    <!-- BEGIN section -->
+    {{- partial "_home-sec-features-gallery.html" . -}}
+    <!-- END section -->
 
-<!-- BEGIN section -->
-<!-- END section -->
+    <div class="bg--2">
+        <!-- BEGIN section -->
+        {{- partial "_home-sec-services.html" . -}}
+        <!-- END section -->
+    </div>
 
-<!-- BEGIN section -->
+    <!-- BEGIN section -->
+    {{- partial "_home-sec-contacts.html" . -}}
+    <!-- END section -->
 
-<!-- END section -->
+    <!-- BEGIN section -->
+    {{- partial "_home-sec-projects.html" . -}}
+    <!-- END section -->
+
+    <!-- BEGIN section -->
+    {{- partial "_home-sec-collections.html" . -}}
+    <!-- END section -->
+
+    <!-- BEGIN section -->
+
+    <!-- END section -->
 </main>
 {{ end }}
