--- a/layouts/index.html
+++ b/layouts/index.html
@@ -45,5 +45,13 @@
     <!-- BEGIN section -->
 
     <!-- END section -->
+
+    <!-- BEGIN section -->
+    {{- partial "_home-sec-news.html" . -}}
+    <!-- END section -->
+
+    <!-- BEGIN section -->
+
+    <!-- END section -->
 </main>
 {{ end }}
