--- a/layouts/partials/_home-sec-projects.html
+++ b/layouts/partials/_home-sec-projects.html
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        <div class="">
+        <div class="projects">
             {{ range .projects }}
                 <article class="project">
                     <a href="#">
