--- a/layouts/index.html
+++ b/layouts/index.html
@@ -51,7 +51,7 @@
     <!-- END section -->
 
     <!-- BEGIN section -->
-
+    {{- partial "_home-sec-subscribe.html" . -}}
     <!-- END section -->
 </main>
 {{ end }}
