--- a/assets/scss/_styles.sass
+++ b/assets/scss/_styles.sass
@@ -75,6 +75,8 @@ a
 	&--collections
 		background-color: $black
 		margin: 0
+		padding-top: var(--gapSection)
+		padding-bottom: var(--gapSection)
 		
 		p:not([class])
 			@extend %p
