--- a/assets/scss/_nav.sass
+++ b/assets/scss/_nav.sass
@@ -81,13 +81,10 @@
 			position: relative
 			transition: $trs
 			text-transform: capitalize
-			
-			//+ft(18, 18, 400)
 			+ft(14, 14, 400, $ffHeading)
 			margin-top: 4px
 			.header &
 				opacity: 0.6
-
 			&::after 
 				content: ''
 				display: block
@@ -144,8 +141,7 @@
 			color: lighten($main, 30%)
 			font-weight: inherit
 		p:not([class])
-			+ft(16, 16*1.4, 300)
-			opacity: 0.8
+			@extend %p
 	&__soc
 		margin-top: $gap4
 		
@@ -166,32 +162,76 @@
 
 
 .footer
-	+theme(dark)
+	background: $black
+	color: $white
 	&__top
-		padding: $gap4 0
-		text-align: center
+		padding: $gap8 0
 		+ft(14, 14*1.4, 300)
 		.container
-			+flex(flex, center, space-between, wrap)
-			gap: $gap4
+			display: grid
+			grid-template-columns: 1fr auto 1fr
+			gap: 5em
 			row-gap: $gap2
+	&__col
+		display: grid
+		gap: $gap2
+			
 	&__btm
-		padding: $gap4 0
-		+theme(main)
+		padding: 0 0 
+		.container
+			+flex(flex, center, space-between, wrap)
+			padding-top: $gap2
+			padding-bottom: $gap2
+			gap: $gap2
+			opacity: 0.6
+			border-top: 1px solid rgba($white, 0.25)
+	&__note
+		@extend %p
+	&__divider
+		opacity: 1
+		+sz(35px, 4px)
+		background-color: lighten($main, 20%)
+		border: 0
+		margin: $gap3 0
+	&__soc
+		a
+			+flex(flex, center, center, wrap)
+			+sz(40px, 40px)
+			background-color: $main
+			transition: $trs
+			svg
+				color: $black
+			&:hover, &:focus, &:active
+				background-color: lighten($main, 20%)
 	&__nav
-		+flex(flex, center, flex-start, wrap)
+		display: grid
+		grid-template-columns: 1fr 1fr
 		gap: $gap4
 		row-gap: $gap2
 		margin-left: auto
 		margin-right: 0
 		margin-top: 4px
+		&-title
+			text-align: left
+			text-transform: uppercase
+			letter-spacing: 0.15em
+			+ft(12, 12, 500)
+		&-sub
+			padding: 0
+			list-style-type: none
+			display: flex
+			flex-direction: column
+			align-items: flex-start
+			gap: $gap2
 		a
 			position: relative
 			transition: $trs
 			+ft(16, 16, 400, $ffHeading)
+			opacity: 0.6
 
 			&:hover, &:active, &:focus
 				color: $main
+				opacity: 1
 				&::after
 					width: 100%
 			&::after 
@@ -201,19 +241,10 @@
 				+sz(0, 2px)
 				background: $main
 				transition: width .3s
-
-	+maw(1200)
-		&__nav
-			order: 2
-			margin-right: auto
-			margin-left: 0
-	// +maw($sm)
-	// 	&__top .container
-	// 		justify-content: center
-	// 		text-align: center
-	// 	&__nav
-	// 		justify-content: center
-
+	+maw(1040)
+		&__top .container
+			display: flex
+			flex-wrap: wrap
 
 
 .logo
@@ -221,6 +252,7 @@
 	margin: 0
 	&::after
 		display: none
+
 
 .soc
 	a
