--- a/layouts/index.html
+++ b/layouts/index.html
@@ -43,7 +43,7 @@
     <!-- END section -->
 
     <!-- BEGIN section -->
-
+    {{- partial "_home-sec-catalog.html" . -}}
     <!-- END section -->
 
     <!-- BEGIN section -->
