--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="{{ .link | relURL }}?v={{ now.Format " 01-02-2006-14-52-26"}}">
   {{ end }}
   {{ "<!-- Custom Stylesheet -->" | safeHTML }}
-  {{ $custom := resources.Get "scss/custom.sass" | toCSS | minify }}
+  {{ $custom := resources.Get "scss/custom.scss" | toCSS | minify }}
   <link rel="stylesheet" href="{{ $custom.Permalink | relURL }}?v={{ now.Format " 01-02-2006-14-52-26"}}"
     media="screen">
 
