--- a/assets/scss/_nav.sass
+++ b/assets/scss/_nav.sass
@@ -154,7 +154,7 @@
 			&:nth-child(n)
 				grid-template-columns: 1fr
 		&__col
-			grid-column: 1px
+			grid-column: 1fr
 			&:last-child
 				grid-column: 1
 				grid-row: 2
