--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -67,12 +67,33 @@
  <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js"></script>
 
  <script type="text/javascript">
-  const emblaNode = document.querySelector('.embla')
-  const options = { loop: false }
-  const emblaApi = EmblaCarousel(emblaNode, options)
+  const emblaNode = document.querySelector('.embla');
+  const options = { loop: true,  slidesToScroll: 'auto' }; // Set loop to true
+  const emblaApi = EmblaCarousel(emblaNode, options);
 
-  console.log(emblaApi.slideNodes()) // Access API
+  const prevButton = document.querySelector('.embla__button--prev');
+  const nextButton = document.querySelector('.embla__button--next');
+
+  prevButton.addEventListener('click', () => {
+    emblaApi.scrollPrev(); // Scroll to the previous slide
+  });
+
+  nextButton.addEventListener('click', () => {
+    emblaApi.scrollNext(); // Scroll to the next slide
+  });
+
+  console.log(emblaApi.slideNodes()); // Access API
 </script>
+
+
+
+
+
+
+
+
+
+
 
 
   {{ $script := resources.Get "js/script.js" | minify }}
