--- a/layouts/partials/_home-sec-catalog.html
+++ b/layouts/partials/_home-sec-catalog.html
@@ -30,7 +30,7 @@
                             <svg class="icon" width="24" height="24">
                                 <use xlink:href="#pdf"></use>
                             </svg>
-                             <small>{{ .btn.label }}</small>
+                            <small>{{ .btn.label }}</small>
                         </a>
                     </article>
                     <hr class="divider">
@@ -39,31 +39,42 @@
             </div>
         </div>
         <hr class="divider my-8">
-        
 
         <div class="slides embla">
-            <div class="slide__container embla__container">
-            {{ range .slides }}
-                <article class="slide embla__slide">
+            <div class="embla__container">
+                {{ range .slides }}
+                <article class="embla__slide">
                     <div class="slide__img">
                         <img src="{{ .img | relURL }}" alt="{{ .title }}">
                     </div>
                     <div class="slide__content">
-                        <h3 class="slide__title">
-                            {{ .title }}
-                        </h3>
-                        <div class="slide__cat">
-                            {{ .cat }}
-                        </div>
-                        <small class="slide__data">
-                            {{ .year }}
-                        </small>
+                        <h3 class="slide__title">{{ .title }}</h3>
+                        <div class="slide__cat">{{ .cat }}</div>
+                        <small class="slide__data">{{ .year }}</small>
                     </div>
                 </article>
-            {{ end }}
+                {{ end }}
+            </div>
+
+            <div class="embla__controls">
+                <div class="embla__buttons">
+                    <button class="embla__button embla__button--prev" type="button">
+                        <svg class="icon" width="24" height="24">
+                            <use xlink:href="#arr-rt"></use>
+                        </svg>
+
+                    </button>
+                    <button class="embla__button embla__button--next" type="button">
+                        <svg class="icon" width="24" height="24">
+                            <use xlink:href="#arr-lt"></use>
+                        </svg>
+                    </button>
+                </div>
+                <!-- <div class="embla__dots"></div> -->
+            </div>
         </div>
-        </div>
-        
+
+
     </div>
     {{ end }}
     {{ end }}
