--- a/assets/scss/_styles.sass
+++ b/assets/scss/_styles.sass
@@ -99,6 +99,24 @@ a
 			+sz(100%, 100%)
 			background-color: rgba($black, 0.8)
 			z-index: -1
+	&--contatcs-cta
+		margin: 0
+		padding-top: 7em
+		padding-bottom: 7em
+		background-color: $black
+		background-image: url('../images/bg/bg-contacts-cta.svg')
+		background-repeat: no-repeat
+		background-position: right bottom
+		background-size: cover
+		background-attachment: fixed
+	&--map
+		position: relative
+		padding-top: 50%
+		& > *
+			position: absolute
+			inset: 0
+			+sz(100%, 100%)
+
 
 .row
 	display: grid
@@ -141,6 +159,9 @@ a
 	gap: $gap2
 
 .my
+	&-0
+		margin-top: 0
+		margin-bottom: 0
 	&-8
 		margin-top: $gap8
 		margin-bottom: $gap8
