--- a/assets/scss/_text.sass
+++ b/assets/scss/_text.sass
@@ -58,6 +58,10 @@ h1, h2, h3, h4, h5, h6
         gap: $gap1
         svg
             color: $main
+    &--lg
+        @extend .h3
+        margin-bottom: 0
+        margin-top: 0
 
 
 .check
@@ -76,3 +80,18 @@ h1, h2, h3, h4, h5, h6
             +sz(20px, 20px)
             min-width: 20px
             background: url('../images/icon/check.svg') no-repeat 50% / contain
+
+
+.breadcrumbs
+    list-style-type: none
+    +flex(flex, center, center, wrap)
+    gap: $gap1
+    margin: 0
+    &__item 
+        +ft(14, 14, 500)
+        text-transform: uppercase
+        letter-spacing: 0.1em
+        color: rgba($white, 0.6)
+        &--active
+            text-decoration: underline
+            color: $white
