--- a/layouts/partials/_form.html
+++ b/layouts/partials/_form.html
@@ -1,36 +1,22 @@
 <!-- BEGIN form -->
-<div id="form-main" class="form__wrap">
-	<form action="./" method="POST" class="form" id="reg_form" name="reg_form">
-		<!--PHP FORM ERROR-->
-		<div class="form__caption">
-			Contact Us
-		</div>
-		
-		<div>
+<div class="form__wrap">
+	<form action="./" method="POST" class="form">
 			<div class="form__row">
-				<label for="user_name">First Name</label>
-				<input type="text" name="firstName" placeholder="Your Name" required />
-				<p><span id="" class="form-error first-name-error"></span></p>
+				<input type="text" name="contact_fullname" placeholder="Enter your full name*" required />
 			</div>
-	
 			<div class="form__row">
-				<label for="user_email">Your Email</label>
-				<input type="email" name="email" placeholder="Your E-mail Address" required />
-				<p><span id="" class="form-error email-error"></span></p>
+				<input type="tel" name="conact_tel" placeholder="Enter your phone number*" required />
 			</div>
-	
 			<div class="form__row">
-				<label for="user_email">Your Message</label>
-				<textarea name="use_msg" id="" placeholder="Your Message" rows="10"></textarea>
-				<p><span id="" class="form-error message-error"></span></p>
+				<input type="email" name="contact_email" placeholder="Enter your e-mail*" required />
 			</div>
-		</div>
+			<div class="form__row">
+				<textarea name="use_msg" placeholder="Type your message" rows="7"></textarea>
+			</div>
 
-		<button type="submit" value="Submit" class="btn secondary-solid-btn btn-block buttonSend" id="submitButton">
-			<b><span>Send</span><span>Send</span></b>
+		<button type="submit" class="btn">
+			<b><span>Сontact Us</span><span>Сontact Us</span></b>
 		</button>
 	</form>
 </div>
-
-
 <!-- END form -->
